testもenable-preview