@@ -121,6 +121,9 @@ gitProperties {
 tasks.withType(JavaCompile) {
     options.compilerArgs += ['--enable-preview']
 }
+test {
+    jvmArgs(['--enable-preview'])
+}
 
 repositories {
     mavenCentral()
